<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:title="@string/fragment_settings_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/adContainer"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/privacyPolicyTitle"
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/privacy_policy" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/privacy_policy_" />

            <TextView
                android:id="@+id/text_view_ads_title"
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/fragment_settings_ads_settings" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_block_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_block_ads" />

            <!--Appearance-->
            <TextView
                android:id="@+id/text_view_appearance_title"
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/fragment_settings_appearance_settings" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_choose_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_theme" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_inverse_barcode_colors_in_dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_inverse_barcode_colors_in_dark_theme_hint"
                app:text="@string/fragment_settings_inverse_barcode_colors_in_dark_theme" />

            <View
                android:id="@+id/delimiter_appearance"
                style="@style/DelimiterStyle" />

            <!--Scanner-->
            <TextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin_very_big"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/fragment_settings_scanner_settings" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_open_links_automatically"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_open_content_automatically_hint"
                app:text="@string/fragment_settings_open_content_automatically" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_copy_to_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_copy_to_clipboard_hint"
                app:text="@string/fragment_settings_copy_to_clipboard" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_simple_auto_focus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_simple_auto_focus_hint"
                app:text="@string/fragment_settings_simple_auto_focus" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_flashlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_flash_hint"
                app:text="@string/fragment_settings_flash" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_vibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_vibrate_hint"
                app:text="@string/fragment_settings_vibrate" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_continuous_scanning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_continuous_scanning_hint"
                app:text="@string/fragment_settings_continuous_scanning" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_confirm_scans_manually"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_confirm_scans_manually_hint"
                app:text="@string/fragment_settings_confirm_scans_manually" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_choose_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_camera" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_select_supported_formats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_supported_formats" />

            <View style="@style/DelimiterStyle" />

            <!--History-->
            <TextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin_very_big"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/fragment_settings_history_settings" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_save_scanned_barcodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/fragment_settings_save_scanned_barcodes_to_history" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_save_created_barcodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/fragment_settings_save_created_barcodes_to_history" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_do_not_save_duplicates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_do_not_save_duplicates_hint"
                app:text="@string/fragment_settings_do_not_save_duplicates" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_clear_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isDelimiterVisible="false"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_clear_history" />

            <View style="@style/DelimiterStyle" />

            <!--Advanced-->
            <TextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin_very_big"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/fragment_settings_advanced_settings" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_choose_search_engine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_choose_search_engines_hint"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_choose_search_engines" />

            <View style="@style/DelimiterStyle" />

            <!--About-->
            <TextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin_very_big"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:text="@string/fragment_settings_about" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_check_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_check_updates" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_permissions" />

            <tech.sonle.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/button_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isDelimiterVisible="false"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_app_version" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>