<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayoutStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:title="@string/fragment_create_barcode_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/adContainer"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/default_margin_small">

                <!--QR code-->
                <TextView
                    style="@style/CreateBarcodeGroupTitleTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin_medium2"
                    android:text="@string/fragment_create_barcode_qr_code" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_clipboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_copy"
                    app:iconBackground="@color/green"
                    app:text="@string/fragment_create_barcode_qr_code_clipboard" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_text"
                    app:iconBackground="@color/blue3"
                    app:text="@string/fragment_create_barcode_qr_code_text" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_link"
                    app:iconBackground="@color/blue3"
                    app:text="@string/barcode_schema_url" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_wifi"
                    app:iconBackground="@color/blue3"
                    app:text="@string/barcode_schema_wifi" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_location"
                    app:iconBackground="@color/blue3"
                    app:text="@string/barcode_schema_geo" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_contact_vcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_contact"
                    app:iconBackground="@color/blue3"
                    app:text="@string/barcode_schema_v_card" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_show_all_qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_qr_code"
                    app:iconBackground="@color/blue"
                    app:isArrowVisible="true"
                    app:isDelimiterVisible="false"
                    app:text="@string/fragment_create_barcode_qr_code_show_all" />

                <!--Barcode-->
                <TextView
                    style="@style/CreateBarcodeGroupTitleTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin_big"
                    android:layout_marginBottom="@dimen/default_margin_medium2"
                    android:text="@string/fragment_create_barcode" />

                <tech.sonle.barcodescanner.feature.common.view.IconButtonWithDelimiter
                    android:id="@+id/button_create_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_barcode"
                    app:iconBackground="@color/blue"
                    app:isArrowVisible="true"
                    app:isDelimiterVisible="false"
                    app:text="@string/fragment_create_barcode_show_all" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/adContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>